# MBCT

./: .gitignore  .~lock.researcher.csv#  Cargo.toml  DOCS_JOURNAL.md  README.md  desktop_errors.txt  errors.txt  researcher.csv
config/: development.toml  live_strategy_log.sql  mee_active_universe.json  schema.sql
data/: .~lock.researcher.csv#
data/static/: hl_assets.txt  hl_meta_ctxs.json  hl_meta_full.json
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/types/: backtest.ts
research/: queries.sql
src-tauri/: Cargo.toml  README.md
src-tauri/src/: commands.rs  main.rs  state.rs  types.rs
trading-common/: Cargo.toml  README.md
trading-common/src/: lib.rs
trading-common/src/backtest/: engine.rs  metrics.rs  mod.rs  portfolio.rs
trading-common/src/backtest/strategy/: base.rs  mod.rs  rsi.rs  sma.rs
trading-common/src/data/: cache.rs  mod.rs  repository.rs  types.rs
trading-core/: CLOSE_FLOW.md  Cargo.toml  README.md  Settings.toml  config.toml  error_log.txt  errors.txt  res_errors.txt
trading-core/benches/: repository_bench.rs
trading-core/src/: config.rs  lib.rs  main.rs  universe.rs
trading-core/src/exchange/: connector.rs  envelope_detection.rs  errors.rs  filters.rs  market_data.rs  mod.rs  traits.rs  types.rs  utils.rs  wallet.rs  ws.rs
trading-core/src/live_trading/: mod.rs  paper_trading.rs
trading-core/src/service/: errors.rs  market_data.rs  mod.rs  types.rs
