[package]
name = "trading-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "rust_decimal"] }
rust_decimal = { version = "1.32", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4.35", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
redis = "0.23.0"

[dev-dependencies]
dotenv = "0.15"
