# E:\MBCT\trading-core\Cargo.toml
[package]
name = "trading-core"
version = "0.1.0"
authors = ["THE ALLIANCE / Rainer Pauli"]
edition = "2021"

# --- MBCT RESEARCHER BINARY DEFINITION ---
[[bin]]
name = "researcher"
path = "src/bin/researcher/main.rs"

[dependencies]
# Interne Allianz-Crate (WICHTIG: Pfad muss zu deiner Ordnerstruktur passen)
trading-common = { path = "../trading-common" }

# Kryptografie & Wallet
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
hex = "0.4"

# Netzwerk & Async
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.77"
http = "0.2.11"

# Daten & Mathematik
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.34", features = ["serde-with-str"] } 
rust_decimal_macros = "1.34"
chrono = { version = "0.4.34", features = ["serde"] }
anyhow = "1.0.79"
log = "0.4.20"
thiserror = "1.0.57"

# Performance & Shared State
dashmap = "5.5.3"

# Framework & Datenbank
config = "0.13.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"

# SQLx für MBCT Researcher (SQLite mit WAL-Mode Support)
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }