# E:\MBCT\trading-core\Cargo.toml
[package]
name = "trading-core"
version = "0.1.0"
authors = ["THE ALLIANCE / Rainer Pauli"]
edition = "2021"

# --- MBCT RESEARCHER BINARY DEFINITIONS ---
[[bin]]
name = "researcher"
path = "src/bin/researcher/main.rs"

[[bin]]
name = "research_analyzer"
path = "src/bin/research_analyzer.rs"

[[bin]]
name = "research_evolution_profiler"
path = "src/bin/research_evolution_profiler.rs"


[dependencies]
# Interne Allianz-Crate
trading-common = { path = "../trading-common" }

# Parallelisierung & Performance (Ergänzt für den Profiler)
rayon = "1.10"
dashmap = "5.5"

# Fehlerbehandlung & Logging (Aus deinem Projekt-Kontext)
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
env_logger = "0.11"
log = "0.4"

# Konfiguration
config = "0.14"

# Kryptografie & Wallet (Original aus deiner Datei)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
hex = "0.4"

# Netzwerk & Async (Original aus deiner Datei)
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.77"
http = "0.2.11"

# Daten & Mathematik (Original aus deiner Datei)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.34", features = ["serde-float"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros"] }
chrono = { version = "0.4", features = ["serde"] }