# E:\MBCT\trading-core\Cargo.toml
[package]
name = "trading-core"
version = "0.1.0"
authors = ["THE ALLIANCE / Rainer Pauli"]
edition = "2021"

# --- MBCT BINARY DEFINITIONS ---
[[bin]]
name = "researcher"
path = "src/bin/researcher/main.rs"

[[bin]]
name = "trader"
path = "src/bin/trader/main.rs"

[[bin]]
name = "research_analyzer"
path = "src/bin/research_analyzer.rs"

[[bin]]
name = "research_evolution_profiler"
path = "src/bin/research_evolution_profiler.rs"

[dependencies]
# Interne Allianz-Crate
trading-common = { path = "../trading-common" }

# Parallelisierung & Performance
rayon = "1.10"
dashmap = "5.5"

# Fehlerbehandlung & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
env_logger = "0.11"
log = "0.4"

# Konfiguration
config = "0.14"
dotenvy = "0.15"

# Kryptografie & Wallet
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
hex = "0.4"

# Netzwerk & Async
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

# Serialisierung
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Mathematik & Zeit
rust_decimal = { version = "1.34", features = ["serde-float", "maths"] }
rust_decimal_macros = "1.34"
chrono = { version = "0.4", features = ["serde"] }

# Datenbank (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono"] }

# async-trait für die Connector-Logik
async-trait = "0.1"